--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 10px;
     }
     .nav {
-      display: none;
+      display: True;
       background-color: #f4f4f4;
       padding: 20px;
     }
