--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 10px;
     }
     .nav {
-      display: True;
+      display: None;
       background-color: #f4f4f4;
       padding: 20px;
     }
@@ -38,8 +38,10 @@
   <nav class="nav" id="nav">
     <ul>
       <li>코딩</li>
-      <li>통계학</li>
+      <li>統計学入門</li>
       <li>회계</li>
+        <ul class="sub-category">
+          <li>簿記</li>
       <li>독서</li>
       <li>위대한 수업
         <ul class="sub-category">
